# globato

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
src/globato/: __init__.py  api.py  utils.py
src/globato/cli/: grits.py
src/globato/modules/: gebco.py  glob_coast.py  glob_dem.py  local_fs.py  sources.py
src/globato/processors/: __init__.py  bag.py  cog.py  filters.py  fred.py  lidar.py  multi_stack.py  multibeam.py  pipe.py  pointz.py  provenance.py  reproject.py  rio.py  simple_stack.py  stream_factory.py  xyz.py
src/globato/processors/filters/: base.py  basic.py  block_minmax.py  block_thin.py  cleaning.py  coplanarz.py  dropclass.py  filters.py  outlierz.py  rangez.py  reference.py  rq.py  spatial_crop.py  stats.py  thinning.py  vector.py
src/globato/processors/formats/: __init__.py  bag.py  cog.py  fio.py  fred.py  gdal_proc.py  gtpc.py  lidar.py  multibeam.py  ogr_proc.py  rio.py  schema.py  stream_factory.py  xyz.py
src/globato/processors/hooks/: osm_landmask.py
src/globato/processors/metadata/: globato_inf.py  provenance.py
src/globato/processors/rasters/: base.py  blend.py  cudem.py  cut.py  diff.py  fill.py  flats.py  gmt_surface.py  morphology.py  scipy_griddata.py  slope.py  zscore.py
src/globato/processors/sinks/: coastline_stack.py  gtpc_writer.py  multi_stack.py  pipe.py  simple_stack.py  xyz_writer.py
src/globato/processors/transforms/: point_pixels.py  pointz.py  reproject.py
