[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "globato"
version = "0.1.4"
description = "A suite of specialized data processors (Multibeam, Lidar, Raster), etc. for the Fetchez ecosystem."
readme = "README.md"
authors = [{ name = "Matthew Love", email = "matthew.love@colorado.edu" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["geospatial", "fetchez", "multibeam", "lidar", "etl"]

dependencies = [
    "fetchez>=0.4.2",
    "transformez",
    "numpy>1.24",
    "laspy[lazrs,laszip]",
    "rasterio>1.4.0",
    "fiona",
    "pandas",
    "pyproj>3.6.1",
    "pyshp"
]

[project.urls]
Homepage = "https://github.com/ciresdem/globato"
Repository = "https://github.com/ciresdem/globato"

[project.entry-points."fetchez.plugins"]
globato = "globato"

[project.scripts]
fetchez-index = "globato.cli_index:main"

# --- Build Configuration ---
[tool.setuptools.packages.find]
where = ["src"]
include = ["globato*"]
namespaces = false